support multiple task-names. also max perm wont make sense in jdk 8. later extract the config out